fix z-index in mobile menu

--- a/src/components/MobileMenu/MobileMenu.scss
+++ b/src/components/MobileMenu/MobileMenu.scss
@@ -9,7 +9,8 @@
   overflow: hidden;
   transform: translateX(100%);
   transition: all 0.5s;
-  
+  z-index: 1;
+
   &--open {
     transform: translateX(0);
   }
